test/mutation_analysis/s0941_valid_mountain_array/hafis/ablation_o3_full/mutants/44/result.txt
./test/mutation_analysis/s0941_valid_mountain_array/hafis/ablation_o3_full/mutants/44/Solution.java:23: error: unreachable statement
        for (; false; i++) {
                           ^
1 error
